--- a/extension/panel.html
+++ b/extension/panel.html
@@ -1,8 +1,36 @@
 <html>
-<head>
-  <script src="panel.js"></script>
-</head>
-<body>
-  <p>Socket.io debug information</p>
-</body>
+	<head>
+	  <script src="panel.js"></script>
+		<link rel="stylesheet" type="text/css" href="panel.css">
+
+	</head>
+	<body>
+		<div id="maincontainer">
+
+		<!-- header would go here -->
+
+		<div id="contentwrapper">
+			<div id="contentcolumn">
+				<div class="innertube">
+
+				</div>
+			</div>
+		</div>
+
+		<div id="leftcolumn">
+			<div class="innertube">
+				<ul id="messages">
+				</ul>
+			</div>
+		</div>
+
+		<div id="rightcolumn">
+			<div class="innertube">
+				
+			</div>
+		</div>
+
+		<!-- footer would go here -->
+
+	</body>
 </html>
