--- a/extension/panel.html
+++ b/extension/panel.html
@@ -17,7 +17,7 @@
 
 		<div id="leftcolumn">
 			<div class="innertube">
-					<ul id="leftlist"></ul>
+					<ul id="socketList"></ul>
 			</div>
 		</div>
 
