--- a/extension/panel.html
+++ b/extension/panel.html
@@ -1,33 +1,26 @@
 <html>
-	<head>
-	  <script src="panel.js"></script>
-		<link rel="stylesheet" type="text/css" href="panel.css">
+<head>
+	<link rel="stylesheet" type="text/css" href="panel.css">
 
-	</head>
-	<body>
-		<div id="maincontainer">
+	<script src="jquery-2.1.0.min.js"></script>
+	<script src="panel.js"></script>
 
-		<!-- header would go here -->
+	<!--Bootstrap!-->
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<script src="bootstrap/js/bootstrap.min.js"></script>
 
-		<div id="contentwrapper">
-			<div id="contentcolumn">
-				<div class="innertube"></div>
-			</div>
-		</div>
+</head>
+<body>
+	<div id = "Pane-1" class = "panel panel-default">
+		<ul id = "socketList" class="nav nav-pills nav-stacked">
+		</ul>
+	</div>
+	<div id = "Pane-2" class = "panel panel-default">
+		
+	</div>
+	<div id= "Pane-3" class = "panel panel-default">
+		afjdoi
+	</div>
 
-		<div id="leftcolumn">
-			<div class="innertube">
-					<ul id="socketList"></ul>
-			</div>
-		</div>
-
-		<div id="rightcolumn">
-			<div class="innertube">
-				
-			</div>
-		</div>
-
-		<!-- footer would go here -->
-
-	</body>
+</body>
 </html>
