Messages now populate table

--- a/extension/panel.html
+++ b/extension/panel.html
@@ -13,33 +13,10 @@
 <body>
 	<div id = "Pane-1" class = "panel panel-default">
 		<ul id = "socketList" >
-			<li> Socket 1 </li>
-			<li> Socket 2 </li>
 		</ul>
 	</div>
 	<div id = "Pane-2" class = "panel panel-default">
-    <table class = "table">
-      <tr>
-        <td>Title 1</td>
-        <td >Title 2</td>
-        <td>Title 3</td>
-      </tr>
-      <tr>
-        <td >Row 1</td>
-        <td>Row 1</td>
-        <td>Row 1</td>
-    	</tr>
-      <tr>
-        <td>Row 2</td>
-        <td>Row 2</td>
-        <td>Row 2</td>
-      </tr>
-      <tr>
-       	<td >Row 3</td>
-       	<td>Row 3</td>
-        <td>Row 3</td>
-      </tr>
-    </table>
+    <!-- messages table -->
   </div>
 
   <div id="slide-panel"> 
