--- a/extension/panel.html
+++ b/extension/panel.html
@@ -2,12 +2,8 @@
 <head>
   <link rel="stylesheet" type="text/css" href="panel.css">
 
-  <script src="js/jquery-2.1.0.min.js"></script>
-  <script src= "js/panel.js"></script>
-
   <!--Bootstrap!-->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <script src="bootstrap/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -20,11 +16,15 @@
   </div>
 
   <div id="slide-panel">
-    <a href="#" class="btn btn-primary" id="opener">
-      <i class="glyphicon glyphicon-backward"></i>
+    <a id="opener"class="btn btn-primary">
+      <i id = "opener-symbol" class="glyphicon glyphicon-backward"></i>
     </a>
     Panel Content
   </div>
+
+<script src="js/jquery-2.1.0.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src= "js/panel.js"></script>
 
 </body>
 </html>
