adding headers to panels

--- a/extension/panel.html
+++ b/extension/panel.html
@@ -1,18 +1,23 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="panel.css">
 
   <!--Bootstrap!-->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
+  <link rel="stylesheet" type="text/css" href="panel.css">
+
+
 </head>
 <body>
   <div id="Pane-1" class="panel panel-default">
+    <h3 id="Pane-1-Title"> Sockets</h3>
     <ul id="socketList" >
     </ul>
   </div>
   <div id="Pane-2" class="panel panel-default">
+    <h3 id="Pane-2-Title"> Messages</h3>
     <!-- messages table -->
+    
   </div>
 
   <div id="slide-panel">
