Record button first attempt

--- a/extension/panel.html
+++ b/extension/panel.html
@@ -11,6 +11,10 @@
 <body>
   <div id="Pane-1" class="panel panel-default">
     <h3 id="Pane-1-Title"> Sockets</h3>
+    <div id="recording">
+      <p id="recordStatus" class="recordStatus"></p>
+      <div id="recordButton" class="recordButton off"></div>
+    </div>
     <ul id="socketList" >
     </ul>
   </div>
