added delete button, no data messages, url to table, column headers

--- a/extension/panel.html
+++ b/extension/panel.html
@@ -11,13 +11,20 @@
 <body>
   <div id="Pane-1" class="panel panel-default">
     <h3 id="Pane-1-Title"> Sockets</h3>
+    <h4 id="Pane-1-Info"> No sockets available<h4>
     <ul id="socketList" >
     </ul>
   </div>
   <div id="Pane-2" class="panel panel-default">
     <h3 id="Pane-2-Title"> Messages</h3>
+    <a id = "clearButton" class="btn btn-danger">
+      <i class="glyphicon glyphicon-remove-circle"></i>
+    </a>
+    <div id="Pane-2-TableArea">
+    <h4 id="Pane-2-Info"> No data available<h4>
     <!-- messages table -->
-    
+
+    </div>
   </div>
 
   <div id="slide-panel">
