--- a/extension/panel.html
+++ b/extension/panel.html
@@ -21,9 +21,7 @@
   </div>
   <div id="Pane-2" class="panel panel-default">
     <h3 id="Pane-2-Title"> Messages</h3>
-    <a id = "clearButton" class="btn btn-danger">
-      <i class="glyphicon glyphicon-remove-circle"></i>
-    </a>
+    <a id = "clearButton">Clear</a>
     <div id="Pane-2-TableArea">
     <h4 id="Pane-2-Info"> No data available<h4>
     <!-- messages table -->
