--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id="app">
     <div class="container">
-        <h2 class="text-center">Chrome Extension Network Manager</h2>
+        <h2 class="text-center">Chrome Extension Network</h2>
         <div class="row">
             <div class="offset-md-3 col-md-6">
                 <div>
