--- a/client/chrome-extension/background.html
+++ b/client/chrome-extension/background.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src="/js/socket.io/socket.io.js"></script>
+    <script src="/js/axios.js"></script>
     <script src="/js/background.js"></script>
 </head>
 <body>
