add captcha resolver for owner

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -36,6 +36,12 @@
                     </form>
                 </div>
                 <div>
+                    <h4>OWNER INTERACT</h4>
+                    <ul class="list-group" id="owner-interact"></ul>
+                </div>
+                <hr/>
+                <div>
+                    <h4>LOGGING</h4>
                     <ul class="list-group" id="messages"></ul>
                 </div>
             </div>
